test/netlist/error/unused-param.bop
A[N](a) = b
where
  b = Not(a);
end where;

A(a) = b
where
  b = A[0](a);
end where;
